--- a/index.html
+++ b/index.html
@@ -69,8 +69,9 @@
       <h1 class="display-4">Erki Kadhafi Rosyid</h1>
       <p class="lead">Software Developer</p>
       <a
-        href="https://drive.google.com/file/d/1dH4M-tx1vir_4AP17YBi_ybuzUblTfXp/view?usp=sharing"
+        href="https://drive.google.com/file/d/1xlctlTvEj_gKNKQoK9WJl_eu6Ea6pWS_/view?usp=sharing"
         class="btn btn-success btn-lg"
+        target="blank"
         >Download CV</a
       >
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
